<resources>
    <string name="nav_home">Inicio</string>
    <string name="nav_browser">Explorar</string>
    <string name="nav_editor">Editor</string>
    <string name="nav_settings">Configuración</string>
</resources>
